--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "@xkeshi/vue-qrcode": "^0.3.0",
     "vue": "^2.4.4",
     "vue-clipboard2": "0.0.6",
     "vue-material": "^0.7.5"
